Fix e2e tests to use local server mode in CI instead of Docker Compose
The e2e tests were failing in CI because they required docker-compose CLI
which is not available on GitHub Actions runners.

Root cause:
- DockerComposeContainer requires 'docker-compose' command on PATH
- GitHub Actions has Docker but not docker-compose installed
- Other Tika tests use GenericContainer which works fine

Solution:
- Modified ExternalTestBase to support both local server and Docker modes
- Uses tika.e2e.useLocalServer property (defaults to true in pom.xml)
- In local mode, starts tika-grpc server via Maven exec (no Docker needed)
- In Docker mode, uses DockerComposeContainer (for local dev with Docker)
- Removed @DisabledOnOs annotations - tests now work on all platforms

This matches the pattern already used in IgniteConfigStoreTest and allows
tests to run in CI without requiring docker-compose while still supporting
Docker-based testing locally.